# obligo

./: .gitignore  .vercelignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  vercel.json
app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  polyfills.ts
app/src/components/: Graph.tsx  KeyBar.tsx  MerchantPanel.tsx  MoneyShot.tsx
app/src/hooks/: useNetworkData.tsx
app/src/lib/: format.ts  names.ts  obligo.ts  tx.ts  wallet.tsx
app/src/shims/: crypto.ts
app/src/surfaces/: Console.tsx  Network.tsx  Redeem.tsx
docs/: DEVNET.md  YIELD.md
kamino-fork/: .gitignore  Cargo.toml  fetch-fixtures.ps1
kamino-fork/src/: lib.rs
kamino-fork/tests/: fork.rs
programs/obligo/: Cargo.toml
programs/obligo/src/: constants.rs  error.rs  events.rs  hook_cpi.rs  lib.rs  math.rs  state.rs  yield_adapter.rs
programs/obligo/src/instructions/: cancel_offer.rs  clear_cycle.rs  create_points_mint.rs  deposit_collateral.rs  expire_points.rs  init_protocol.rs  issue_points.rs  liquidate.rs  mod.rs  post_offer.rs  redeem.rs  register_merchant.rs  reinstate.rs  set_terms.rs  settle.rs  withdraw_collateral.rs
programs/obligo/tests/: cycle.rs  expiry.rs  hook_abi.rs  invariants.rs  issuance.rs  liquidate.rs  mint.rs  offers.rs  redeem.rs  registry.rs  settle.rs  venue.rs
programs/obligo/tests/common/: mod.rs
programs/obligo_hook/: Cargo.toml
programs/obligo_hook/src/: lib.rs
programs/obligo_hook/tests/: hook.rs
programs/obligo_venue/: Cargo.toml
programs/obligo_venue/src/: lib.rs
sdk/: README.md  package.json  tsconfig.json
sdk/examples/: prove.ts  smoke.ts
sdk/src/: client.ts  coder.ts  constants.ts  cycles.ts  index.ts  math.ts  pdas.ts
tests/mock_core/: Cargo.toml
tests/mock_core/src/: lib.rs
