[workspace]
members = [
    "programs/*"
]
# Test fixture with its own workspace; see tests/mock_core/Cargo.toml.
exclude = [
    "tests/mock_core"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
