[package]
name = "obligo"
version = "0.1.0"
description = "A clearing house for loyalty liabilities: fractional-reserve point issuance, netting and liquidation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "obligo"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
anchor-spl = "1.1.2"

# The hook is deliberately NOT a build dependency: see src/hook_cpi.rs. It is a dev-dependency
# only, so the tests can pin our hand-written instruction encoding to the real hook program.
# `no-entrypoint` because the test binary already links one program's entrypoint — ours.
[dev-dependencies]
obligo_hook = { path = "../obligo_hook", features = ["no-entrypoint"] }
litesvm = "0.10.0"
spl-tlv-account-resolution = "0.11.1"
solana-account = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-transaction = "3.0.2"
solana-transaction-error = "3.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
